tests/paczka1/small_fuzzy/74088354.err
Error in line 5: 5duZMAn S531 9,4
Error in line 6: uc5JOXtokf A446 310,7
Error in line 11: 4Xo9Tdhoc29 A446 77,1
